# GPTtrace

./: .editorconfig  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  GPTtrace.py  LICENSE  README.md  bcc_tools.py  command.py  funcs.json  gen_func_call.py  install.sh  main.py  pyproject.toml  requirements.txt  train_data.json
.github/workflows/: pylint.yml
data_save/: funcs.json
doc/: talk.md
gpttrace/: GPTtrace.py  __init__.py  __main__.py  bpftrace.py  cmd.py  config.py  examples.py  execute.py  generate.py  prompt.py
gpttrace/utils/: __init__.py  common.py  prompt.py
prompts/: 0.md  1.0.md  1.1.md  1.2.md  1.3.md  1.md  2.0.md  2.md  3.0.md  3.1.md  3.md
tools/: biosnoop.bt  examples.json  generate.py  output.json
